##
##  Created by VD on 16/04/2010.
##  Copyright 2010 INRIA. All rights reserved.
##

AM_CPPFLAGS=@AM_CPPFLAGS@ -I$(top_srcdir)/src -I$(srcdir)

kastlincludedir=$(includedir)/kastl

kastlinclude_HEADERS=\
	kastl/kastl_types.h\
	kastl/kastl_sequences.h\
	kastl/kastl_workqueue.h\
	kastl/kastl_sequences.h\
	kastl/kastl_loop.h\
	kastl/algorithm\
	kastl/numeric\
	kastl/transform.h\
	kastl/for_each.h\
	kastl/find.h\
	kastl/find_if.h\
	kastl/find_first_of.h\
	kastl/inner_product.h\
	kastl/count.h\
	kastl/count_if.h\
	kastl/copy.h\
	kastl/search.h\
	kastl/min_element.h\
	kastl/max_element.h\
	kastl/fill.h\
	kastl/generate.h\
	kastl/replace.h\
	kastl/replace_if.h\
	kastl/equal.h\
	kastl/mismatch.h\
	kastl/search.h\
	kastl/adjacent_find.h\
	kastl/adjacent_difference.h
